frontend/test/should_fail/container_copy_constructor_001.grg
test t
{
	if {
		set<Node>(set<Edge>{}).empty();
	}
}
